Decouple engine from renderer
We might need to switch to a different renderer in the future, this will
be easier to do if the engine is decoupled from the actual renderer.

Signed-off-by: Pierre-Emmanuel Patry <pierre-emmanuel.patry@embecosm.com>

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,7 @@ project_description = 'An example shared library'
 
 project_source_files = [
   'src/engine.cc',
+  'src/renderer/vulkan.cc',
 ]
 
 project_test_files = [
